# circleci-ai-platform-example

./: MANIFEST.in  pyproject.toml  setup.py
.circleci/: config.yml
scripts/: job_status.sh
temp/: Makefile  pyproject.toml  setup.py
temp/trainer/: task.py
trainer/: task.py
trainer/sql/: example.sql
