[tool.poetry]
name = "trainer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.scripts]
my-script = "trainer.task:main"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
