[tool.poetry]
name = "temp"
version = "1.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"
pandas = "0.25.*"
numpy = "1.18.*"
scikit-learn = "^0.23.2"
gcsfs = "^0.6.2"
google-api-python-client = "^1.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"